src/pages/Cart.css
/*No Prodcuts part*/
.no-records {
  background-color: transparent;
  border-radius: 10px;
  box-shadow: 0 0 0 10px solid gray;
  height: 40%;
  width: 80%;
  margin: 5rem auto;
  padding: 15% 10%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.no-records button {
  padding: 10px;
  font-weight: 600;
  border-radius: 4px;
  background-color: brown;
  color: white;
  border: none;
  display: flex;
  align-items: center;
  border: 2px solid brown;
  gap: 5px;
  &:hover {
    background-color: black;
    color: white;
    border: 2px solid black;
    cursor: pointer;
  }
}

.cart-container {
  margin-top: 30px;
  display: flex;
  justify-content: space-around;
  min-height: 80vh;
}

.cart-container .order-summary {
  border: 1px solid grey;
  padding: 4rem;
  border-radius: 20px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.order-summary h1 {
  text-align: center;
  color: var(--heading);
}

.order-summary table {
  width: 100%;
  color: var(--heading);
}

table tr {
  height: 30px;
}

.order-summary .amount-column {
  text-align: right;
}

.place-order-btn {
  width: 100%;
  margin-top: 10%;
  height: 40px;
  font-size: 2rem;
  font-weight: 600;
  border: 1px solid black;
  background-color: transparent;
  border-radius: 6px;
  padding: 5px;
  white-space: nowrap;
  transition: 0.3s;
  &:hover {
    background-color: var(--site-honey-badger);
    color: white;
  }
}

.grand-total {
  font-size: 2rem;
}

@media (max-width: 820px) {
  .cart-container .order-summary {
    padding: 2rem;
  }
  .order-summary h1 {
    font-size: 1.6rem;
    white-space: nowrap;
  }
  .place-order-btn {
    font-size: 1.4rem;
  }

  .grand-total {
    font-size: 2rem;
  }
}
@media (max-width: 480px) {
  .cart-container {
    flex-wrap: wrap;
  }
  .cart-container .order-summary {
    width: 100%;
    box-shadow: unset;
    border: none;
  }
}

